Fixed cropping bug

--- a/public/css/main-page.css
+++ b/public/css/main-page.css
@@ -37,7 +37,8 @@ body {
       border-width: 2px;
    }
    .fs-container {
-      width: 550px;
+      width:550px;
+      height:400px;
       margin: auto;
    }
    .literally {
